# artifact-arcade

./: .env.example  .gitignore  128x128_fixed.rcfgx  2x2_128x128.rcfgx  CLAUDE.md  GESTURE_CHALLENGE_SUMMARY.md  LED_TESTS.md  README.md  TOMORROW_RECOVERY_PLAN.md  arcade.docx  correct_128x128.rcfgx  correct_128x128.xml  create_2x2_config.py  current.rcfgx  fixed_4hub_128x128.rcfgx  fixed_4hub_128x128.xml  fixed_4hub_128x128_v2.rcfgx  fuck.scr  pi_system_logs_last_4_hours.txt  preliminary-devplan.docx  pyproject.toml  regular_64x64.rcfgx  request_camera_permission.py  requirements-hardware.txt  requirements.txt  screen_1x1_128x128.scr  sniper.sh
config/: __init__.py  hardware.py  settings.py
docs/: README-gesture-challenge.md  development-plan.md  gemini_analysis.md  gesture-challenge-architecture.md  gesture-challenge-quick-ref.md  hand-gesture-integration.md  momentobooth-analysis.md  new-mode-ideas-boiling-room.md  novastar_setup.md  raspi-photo-booth-analysis.md  thermal-printer-integration.md
final_config/: current.xml
pi-config/: cmdline.txt  config.txt
rcfgx_extracted/: current.xml
scripts/: activate-2k17-photobooth.sh  activate-alye-parusa-photobooth.sh  activate-cringe-party-photobooth.sh  activate-jara-photobooth.sh  activate-world-cup-final-photobooth.sh  arcade-autopull.service  arcade-autopull.timer  arcade-bot.service  artifact-audio.service  artifact-upload-spool.service  artifact.service  autopull.sh  check-vnvnc-video-wall.sh  create_gryffindor_promo.py  create_house_pdfs.py  deploy_artifact_retry.sh  download_divoom_animations.py  led_demo.py  (+29 more)
(+201 files in other folders)
